Style site off of Brians designs. Add new images. . Remove many sections. TODO: add fonts. Clean up

--- a/assets/css/plugins.css
+++ b/assets/css/plugins.css
@@ -268,7 +268,7 @@ Author URI: http://themeforest.net/user/XpeedStudio/portfolio
   opacity: 0.5;
   cursor: default;
 }
-.owl-theme .owl-nav.disabled + .owl-dots {
+/*.owl-theme .owl-nav.disabled + .owl-dots {
   margin-top: 10px;
 }
 .owl-theme .owl-dots {
@@ -299,7 +299,7 @@ Author URI: http://themeforest.net/user/XpeedStudio/portfolio
 .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
   background: #869791;
 }
-
+*/
 
 
 // END OWL Carousel
