--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,12 +277,12 @@ ul{
     height: 670px;
 }
 .home-overlay {
-    background-color: rgba(237, 237, 237, 0.80);
+    /*background-color: rgba(237, 237, 237, 0.80);*/
     width: 100%;
     height:auto;
 }
 .video_overlay {
-    background-color: rgba(76, 61, 114, 0.8);
+    /*background-color: rgba(76, 61, 114, 0.8);*/
     width: 100%;
     height: auto;
 }
@@ -564,7 +564,8 @@ input::-ms-input-placeholder {
     padding: 0px 15px;
 }
 .navbar-brand>img {
-    max-width: 80%;
+    max-width: 100%;
+    height: 47px;
 }
 .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover, .navbar-default .navbar-nav>.open>a:focus{
     background-color:transparent;
@@ -590,7 +591,7 @@ input::-ms-input-placeholder {
 
 /*home section*/
 .home{
-    background: url(../images/ian-baldwin.jpg) no-repeat 100% 100%;
+    background: url(../images/telluride.jpg) no-repeat 100% 100%;
     background-size: cover;
 }
 
@@ -651,6 +652,9 @@ input::-ms-input-placeholder {
     height: 100%;
 }
 
+#about {
+    text-align: center;
+}
 /*video section css*/
 
 .video{
@@ -706,16 +710,16 @@ input::-ms-input-placeholder {
 
 /* Team section css */
 .team{
-    background: url(../images/mountain-landscape.jpg) no-repeat center center;
     overflow:hidden;
     background-size: cover;
-    color:#fff;
+    color: black;
+    background-color: #EEEBD9;
 }
 .team .main_team{
 
 }
 .team .main_team .head_title h3{
-    color:#fff;
+    color: black;
 }
 
 /* WIP make images zoom in slightly on hover...must make it a background image instead*/
@@ -968,7 +972,7 @@ input::-ms-input-placeholder {
 
 /*contact section css*/
 .contact{
-    background: #fff;
+    background: #232D39;
 }
 
 .contact .main_clinetslogo{
@@ -983,7 +987,20 @@ input::-ms-input-placeholder {
 
 }
 
+/*.social-media-icons div {
+    border: solid 2px white;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+}*/
 
+.social-media-icons a i {
+    font-size: 3rem;
+    color: white;
+    border: solid 2px white;
+    border-radius: 100%;
+    padding: 12px;
+}
 
 
 
@@ -1004,11 +1021,7 @@ input::-ms-input-placeholder {
 .main_maps a h4{}
 
 
-
-
-
 /*footer widget*/
-
 .footer_widget{
     background: url(../images/footerbg.jpg) no-repeat top center;
     color:#fff;
@@ -1182,9 +1195,8 @@ input::-ms-input-placeholder {
     text-align: center;
 }
 
-.mara-bike-image {
-    margin: 10px 0 10px 0;
-    border-radius: 4%;
+.mara-contact {
+    color: white;
 }
 
 .header-intro {
