--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,7 +272,7 @@ ul{
     margin-bottom: 4rem;
 }
 .overlay {
-    background-color: rgba(76, 61, 114, 0.5);
+    background-color: rgba(1, 1, 1, 0.3);
     width: 100%;
     height: 670px;
 }
@@ -591,7 +591,7 @@ input::-ms-input-placeholder {
 
 /*home section*/
 .home{
-    background: url(../images/telluride.jpg) no-repeat 100% 100%;
+    background: url(../images/telluride2.jpg) no-repeat 100% 100%;
     background-size: cover;
 }
 
@@ -672,6 +672,9 @@ input::-ms-input-placeholder {
     margin-bottom: 0px;
 }
 
+.section-header {
+    color: black;
+}
 
 /*service section css*/
 .border_devider{
@@ -868,7 +871,7 @@ input::-ms-input-placeholder {
     color: #fff;
     transition: all 0.6s;
     opacity: 0;
-    background-color: rgba(76, 61, 114, 0.55)
+    /*background-color: rgba(76, 61, 114, 0.55)*/
 }
 .portfolio .grid_item_overlay p{
     color:#fff;
