Add different font color to get in touch section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -993,6 +993,7 @@ input::-ms-input-placeholder {
 /*contact section css*/
 .contact{
     background: #232D39;
+    color: #EEEBD9;
 }
 
 .contact .main_clinetslogo{
