--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -58,12 +58,17 @@ Author URI: http://www.bootstrapthemes.co
     }
     .navbar-default .navbar-collapse, .navbar-default .navbar-form {
         border-color: transparent;
-        background-color: rgba(67, 52, 108, 0.5);
+        background-color: rgba(0, 0, 0, 0.65);
         text-align: center;
+        font-size: 22px;
     }
     .main_menu_bg .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus{
         border-bottom: 0px solid;
     }
+    .main_menu_bg .navbar-nav>li>a {
+        font-size: 19px
+    }
+
     .main_clinetslogo{
         margin-top:30px;
     }    
